[package]
name = "comment-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["sqlite_pool"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4"
