[package]
name = "comment-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["sqlite_pool"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", default_features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.7.4"
