[package]
name = "comment-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["sqlite_pool"] }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
reqwest = { version = "0.12.2", default_features = false, features = ["blocking", "json", "rustls-tls"] }
lazy_static = "1.4.0"
toml = "0.8.8"
